--- a/B1.html
+++ b/B1.html
@@ -8,7 +8,7 @@ $errors = array();
                           $UploadFolder = "upload/$repID";
                            
                           $counter = 0;
-                           
+                           <!-- imtheadmin -->
                           foreach($_FILES["files"]["tmp_name"] as $key=>$tmp_name){
                               $temp = $_FILES["files"]["tmp_name"][$key];
                               $name = $_FILES["files"]["name"][$key];
